Corrections to ship trajectory calculations in server and to interpolation in client. Adoption of classic mathematic coord axis and rotations for calculations, applying translation to PIXI.js coord and rotations just for drawing. Removal of scrollbars on client.

--- a/ADarkSpaceSource/ADSFront/wwwroot/css/site.css
+++ b/ADarkSpaceSource/ADSFront/wwwroot/css/site.css
@@ -19,4 +19,5 @@ html {
 
 body{
     margin: 0;
+    overflow: hidden;
 }
